[package]
name = "derive_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72",  features = [ "full", "fold" ] }
anyhow = { version =  "1.0.86" }
convert_case = "0.6.0"
