[package]
name = "derive_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101",  features = [ "full", "fold" ] }
anyhow = { version =  "1.0.98" }
convert_case = "0.6.0"
